apps/requestrr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: requestrr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: requestrr
  template:
    metadata:
      labels:
        app: requestrr
    spec:
      containers:
        - name: requestrr
          image: docker.io/thomst08/requestrr:latest
          ports:
            - containerPort: 4545
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "500m"
              memory: "512Mi"
              ephemeral-storage: "2Gi"
          volumeMounts:
            - name: config
              mountPath: /root/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: requestrr-config
