apps/requestrr/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: requestrr-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`requestrr.oglesby.io`)
      kind: Rule
      services:
        - name: requestrr
          port: 4545
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: requestrr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`requestrr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: requestrr
          port: 4545
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: media
spec:
  redirectScheme:
    scheme: https
    permanent: true
